force-app/main/default/objects/Visitor_Details__c/Visitor_Details__c.object-meta.xml
<CustomObject>
    <label>Visitor Details</label>
    <nameField>
        <displayFormat>VD-{0000}</displayFormat>
        <label>Visitor Detail</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visitor Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>