force-app/main/default/objects/Visitor_Details__c/fields/Answer__c.field-meta.xml
<CustomField>
    <fullName>Answer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>24401</description>
    <label>Answer</label>
    <referenceTo>disco__Answer__c</referenceTo>
    <relationshipLabel>Visitor Details</relationshipLabel>
    <relationshipName>Visitor_Details</relationshipName>
    <type>Lookup</type>
</CustomField>