force-app/main/default/objects/Visitor_Details__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <label>Company title</label>
    <length>150</length>
    <type>Text</type>
</CustomField>