force-app/main/default/objects/Visitor_Details__c/fields/Conga_Signature_URL__c.field-meta.xml
<CustomField>
    <fullName>Conga_Signature_URL__c</fullName>
    <description>24401</description>
    <label>Conga Signature URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>