force-app/main/default/objects/Visitor_Details__c/fields/Form__c.field-meta.xml
<CustomField>
    <fullName>Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Form</label>
    <referenceTo>disco__Form__c</referenceTo>
    <relationshipLabel>Visitor Details</relationshipLabel>
    <relationshipName>Visitor_Details</relationshipName>
    <type>Lookup</type>
</CustomField>