force-app/main/default/objects/Visitor_Details__c/fields/NPL_JHA_for_SDOCS__c.field-meta.xml
<CustomField>
    <fullName>NPL_JHA_for_SDOCS__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NPL JHA for SDOCS</label>
    <referenceTo>NPL_JHA_for_SDOCS__c</referenceTo>
    <relationshipLabel>Visitor Details</relationshipLabel>
    <relationshipName>Visitor_Details</relationshipName>
    <type>Lookup</type>
</CustomField>