force-app/main/default/objects/Visitor_Details__c/fields/Signature_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Signature_Image_URL__c</fullName>
    <description>24401</description>
    <formula>Answer__r.Signature_Image_URL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Signature Image URL</label>
    <type>Text</type>
</CustomField>