force-app/main/default/objects/Visitor_Details__c/fields/Visitor_name__c.field-meta.xml
<CustomField>
    <fullName>Visitor_name__c</fullName>
    <label>Visitor name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>